--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Meet Shopia The Friendly Robot with AI Smarts</title>
+    <title>Meet Sophia The Friendly Robot with AI Smarts</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -48,7 +48,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-dark p-0">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="text-white">shopiatherobot<span class="text-dark">.</span>ai</h1>
+                    <h1 class="text-white">sophiatherobot<span class="text-dark">.</span>ai</h1>
                 </a>
                 <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
@@ -77,7 +77,7 @@
         <div class="container pt-5">
             <div class="row g-5 pt-5">
                 <div class="col-lg-6 align-self-center text-center text-lg-start mb-lg-5">
-                    <div class="btn btn-sm border rounded-pill text-white px-3 mb-3 animated slideInRight">Meet Shopia</div>
+                    <div class="btn btn-sm border rounded-pill text-white px-3 mb-3 animated slideInRight">Meet sophia</div>
                     <h1 class="display-4 text-white mb-4 animated slideInRight">The Friendly Robot with AI Smarts</h1>
                     <p class="text-white mb-4 animated slideInRight">Bringing intelligence, creativity, and innovation to life, one interaction at a time.</p>
                     <a href="" class="btn btn-light py-sm-3 px-sm-5 rounded-pill me-3 animated slideInRight">Read More</a>
@@ -141,7 +141,7 @@
                 <div class="col-lg-6 align-self-center mb-md-5 pb-md-5 wow fadeIn" data-wow-delay="0.3s">
                     <div class="btn btn-sm border rounded-pill text-white px-3 mb-3">Why Choose Us</div>
                     <h1 class="text-white mb-4">The Ultimate AI-Powered Assistant</h1>
-                    <p class="text-light mb-4">Shopia combines advanced artificial intelligence with intuitive design to streamline tasks, provide smart solutions, and transform how you work. Trusted for efficiency and accuracy, Shopia is your go-to partner in the AI era.</p>
+                    <p class="text-light mb-4">sophia combines advanced artificial intelligence with intuitive design to streamline tasks, provide smart solutions, and transform how you work. Trusted for efficiency and accuracy, sophia is your go-to partner in the AI era.</p>
                     <div class="d-flex align-items-center text-white mb-3">
                         <div class="btn-sm-square bg-white text-primary rounded-circle me-3">
                             <i class="fa fa-check"></i>
@@ -371,7 +371,7 @@
                     <a href="index.html" class="d-inline-block mb-3">
                         <h1 class="text-white">About<span class="text-primary"></h1>
                     </a>
-                    <p class="mb-0">ShopiaTheRobot is an advanced AI-powered assistant, designed to simplify your tasks and boost productivity.Perfect for personal and professional use, Shopia is your reliable partner in navigating the digital world with precision, innovation, and ease.</p>
+                    <p class="mb-0">sophiaTheRobot is an advanced AI-powered assistant, designed to simplify your tasks and boost productivity.Perfect for personal and professional use, sophia is your reliable partner in navigating the digital world with precision, innovation, and ease.</p>
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.3s">
                     <h5 class="text-white mb-4">Get In Touch</h5>
