--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                     <a href="index.html" class="d-inline-block mb-3">
                         <h1 class="text-white">About<span class="text-primary"></h1>
                     </a>
-                    <p class="mb-0">sophiaTheRobot is an advanced AI-powered assistant, designed to simplify your tasks and boost productivity.Perfect for personal and professional use, sophia is your reliable partner in navigating the digital world with precision, innovation, and ease.</p>
+                    <p class="mb-0">SophiaTheRobot is an advanced AI-powered assistant, designed to simplify your tasks and boost productivity.Perfect for personal and professional use, sophia is your reliable partner in navigating the digital world with precision, innovation, and ease.</p>
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.3s">
                     <h5 class="text-white mb-4">Get In Touch</h5>
