--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <div class="container-fluid py-5">
     <div class="container">
         <iframe 
-            src="https://player.vimeo.com/video/1032390647?badge=0&byline=0&h=0eec85c1eb&portrait=0&title=0" 
+            src="https://player.vimeo.com/video/1032390647?badge=0&byline=0&h=0eec85c1eb&portrait=0&title=0&autoplay=1&muted=1" 
             style="width: 100%; height: 500px; border-radius: 10px; border: none;" 
             allow="autoplay; fullscreen;  picture-in-picture" 
             allowfullscreen>
