--- a/index.html
+++ b/index.html
@@ -80,7 +80,13 @@
                     <div class="btn btn-sm border rounded-pill text-white px-3 mb-3 animated slideInRight">Meet Sophia</div>
                     <h1 class="display-4 text-white mb-4 animated slideInRight">The Friendly Robot with AI Smarts</h1>
                     <p class="text-white mb-4 animated slideInRight">Bringing intelligence, creativity, and innovation to life, one interaction at a time.</p>
-                    <a href="https://www.hansonrobotics.com/" class="btn btn-light py-sm-3 px-sm-5 rounded-pill me-3 animated slideInRight">Read More</a>
+                    <a href="https://www.hansonrobotics.com/" 
+   class="btn btn-light py-sm-3 px-sm-5 rounded-pill me-3 animated slideInRight" 
+   target="_blank" 
+   rel="noopener noreferrer">
+   Read More
+</a>
+
 
                     
                 </div>
